--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,10 @@ keywords = ["xkcd", "comics", "cli", "utility", "rust"]
 [dependencies]
 reqwest = { version = "0.11", features = ["json", "blocking"] } # The reqwest crate for making HTTP requests.
 serde = { version = "1.0", features = ["derive"] } # The serde crate for serializing and deserializing data.
-tokio = { version = "1.0", features = ["full"] } # The tokio crate for asynchronous programming.
+tokio = { version = "1", features = ["full"] } # The tokio crate for asynchronous programming.
+
+[dev-dependencies]
+mockito = "1" # The mockito crate for mocking HTTP requests.
 
 [profile.release]
 opt-level = 3 # The optimization level for release builds.
